Handle cases where manually filing a flight with an existing draft Flight Report
git-svn-id: file:///home/svn/DVA2006@20704 1e6d2d28-e1fb-0310-b8ab-81908d8c6b6a